--- a/css/cart.css
+++ b/css/cart.css
@@ -63,9 +63,40 @@
   color: #68696b;
   text-align: center;
 }
-.center .cart_content .goods_list img {
+.center .cart_content .goods_list .cart_1 img {
   width: 70px;
   height: 70px;
+}
+.center .cart_content .goods_list .cut {
+  display: block;
+  margin-top: 3px;
+  margin-right: 3px;
+  height: 11px;
+  width: 11px;
+  padding: 0 4px;
+  float: left;
+}
+.center .cart_content .goods_list .add {
+  display: block;
+  margin-top: 3px;
+  margin-right: 3px;
+  height: 11px;
+  width: 11px;
+  padding: 0 4px;
+  float: left;
+}
+.center .cart_content .goods_list .buy_num_input {
+  display: inline-block;
+  width: 30px;
+  height: 15px;
+  background-color: #f5f5f5;
+  border: solid 1px #ccc;
+  text-align: center;
+  float: left;
+  vertical-align: bottom;
+}
+.center .cart_content .goods_list td a:hover {
+  cursor: pointer;
 }
 .center .cart_content .goods_list td a {
   color: #325bc4;
