--- a/css/goods.css
+++ b/css/goods.css
@@ -1,3 +1,7 @@
+a:hover {
+  cursor: pointer;
+}
+
 .center {
   margin: 0 auto;
   width: 980px;
@@ -459,6 +463,10 @@
   color: #4b4b4b;
 }
 
+.mg_l:hover {
+  cursor: pointer;
+}
+
 .fixed_box {
   position: fixed;
   right: 0;
@@ -475,4 +483,62 @@
   font-size: 1px;
   height: 0;
   line-height: 0;
+}
+
+.insert_into_cart {
+  width: 400px;
+  left: 439px;
+  top: 400px;
+  display: block;
+  position: absolute;
+  z-index: 20000000;
+  border: 1px solid #8cc0e7;
+  background: #FAFDFF;
+  box-shadow: 4px 5px 0 #D9D9D9;
+}
+.insert_into_cart .insert_title {
+  background: #d2edff;
+  font-size: 14px;
+  font-weight: 700;
+  height: 30px;
+  line-height: 30px;
+  padding-left: 10px;
+  text-align: left;
+}
+.insert_into_cart .insert_title #tips {
+  float: left;
+}
+.insert_into_cart .insert_title .btn_close {
+  float: right;
+  width: 13px;
+  height: 13px;
+  margin: 8px 10px 0 0;
+  background: urL("http://images.d1.com.cn/images2012/New/result/box1.png") no-repeat 0 -42px;
+  font-size: 0;
+}
+.insert_into_cart .insert_title .btn_close:hover {
+  background-position: -16px -42px;
+  color: #aa2e44;
+  cursor: pointer;
+}
+.insert_into_cart .insert_content {
+  padding: 20px;
+  line-height: 1.5em;
+  text-align: left;
+}
+.insert_into_cart .insert_content .insert_content_innerbox {
+  overflow: hidden;
+  padding: 3px 0 0 34px;
+}
+.insert_into_cart .insert_content .insert_content_innerbox .hint_content {
+  float: left;
+  color: #333333;
+}
+.insert_into_cart .insert_content .insert_content_innerbox .hint_content .hint_title {
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-weight: bold;
+}
+.insert_into_cart .insert_content .insert_content_innerbox .hint_content .two_btn {
+  margin: 15px 0 5px;
 }
