--- a/css/lists.css
+++ b/css/lists.css
@@ -224,6 +224,9 @@
 .listbody .shop_container .shop_list li .goods .goods_incart .mg_l {
   margin-left: 10px;
 }
+.listbody .shop_container .shop_list li .goods .goods_incart .mg_l img:hover {
+  cursor: pointer;
+}
 .listbody .shop_container .shop_list li .goods .goods_shop {
   margin-top: 4px;
   font-size: 12px;
@@ -274,4 +277,62 @@
 }
 .listbody .shop_container .pagefooter a:hover {
   color: #AA2E44;
+}
+
+.insert_into_cart {
+  width: 400px;
+  left: 439px;
+  top: 764.5px;
+  display: block;
+  position: absolute;
+  z-index: 20000000;
+  border: 1px solid #8cc0e7;
+  background: #FAFDFF;
+  box-shadow: 4px 5px 0 #D9D9D9;
+}
+.insert_into_cart .insert_title {
+  background: #d2edff;
+  font-size: 14px;
+  font-weight: 700;
+  height: 30px;
+  line-height: 30px;
+  padding-left: 10px;
+  text-align: left;
+}
+.insert_into_cart .insert_title #tips {
+  float: left;
+}
+.insert_into_cart .insert_title .btn_close {
+  float: right;
+  width: 13px;
+  height: 13px;
+  margin: 8px 10px 0 0;
+  background: urL("http://images.d1.com.cn/images2012/New/result/box1.png") no-repeat 0 -42px;
+  font-size: 0;
+  cursor: pointer;
+}
+.insert_into_cart .insert_title .btn_close:hover {
+  background-position: -16px -42px;
+  color: #aa2e44;
+}
+.insert_into_cart .insert_content {
+  padding: 20px;
+  line-height: 1.5em;
+  text-align: left;
+}
+.insert_into_cart .insert_content .insert_content_innerbox {
+  overflow: hidden;
+  padding: 3px 0 0 34px;
+}
+.insert_into_cart .insert_content .insert_content_innerbox .hint_content {
+  float: left;
+  color: #333333;
+}
+.insert_into_cart .insert_content .insert_content_innerbox .hint_content .hint_title {
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-weight: bold;
+}
+.insert_into_cart .insert_content .insert_content_innerbox .hint_content .two_btn {
+  margin: 15px 0 5px;
 }
