--- a/scss/cart.scss
+++ b/scss/cart.scss
@@ -59,11 +59,45 @@
                     text-align: center;
                 }
             }
-            img{
+            .cart_1{
+                img{
                 width: 70px;
                 height: 70px;
+                }
             }
+            .cut{
+                display: block;
+                margin-top: 3px;
+                margin-right: 3px;
+                height: 11px;
+                width: 11px;
+                padding: 0 4px;
+                float: left;
+            }
+            .add{
+                display: block;
+                margin-top: 3px;
+                margin-right: 3px;
+                height: 11px;
+                width: 11px;
+                padding: 0 4px;
+                float: left;
+            }
+            .buy_num_input{
+                display: inline-block;
+                width: 30px;
+                height: 15px;
+                background-color: #f5f5f5;
+                border: solid 1px #ccc;
+                text-align: center;
+                float: left;
+                vertical-align: bottom;
+            }
+            
             td{
+                a:hover{
+                    cursor: pointer;
+                }
                 a{
                     color: #325bc4;
                     text-decoration: underline;
@@ -102,6 +136,7 @@
         }
     }
 }
+
 .clear {
     clear: both;
     font-size: 1px;
