--- a/scss/goods.scss
+++ b/scss/goods.scss
@@ -1,3 +1,6 @@
+a:hover{
+    cursor: pointer;
+}
 .center{
     margin:0 auto;
     width: 980px;
@@ -468,6 +471,10 @@
         }
     }
 }
+.mg_l:hover{
+    cursor: pointer;
+}
+
 .fixed_box{
     position: fixed;
     right: 0;
@@ -483,4 +490,61 @@
     font-size: 1px;
     height: 0;
     line-height: 0;
+}
+.insert_into_cart{
+    width: 400px;
+    left: 439px;
+    top: 400px;
+    display: block;
+    position: absolute;
+    z-index:20000000;
+    border:1px solid #8cc0e7;
+    background: #FAFDFF;
+    box-shadow: 4px 5px 0 #D9D9D9;
+    .insert_title{
+        background: rgb(210,237,255);
+        font-size: 14px;
+        font-weight: 700;
+        height: 30px;
+        line-height: 30px;
+        padding-left: 10px;
+        text-align: left;
+        #tips{
+            float: left;
+        }
+        .btn_close{
+            float: right;
+            width: 13px;
+            height: 13px;
+            margin: 8px 10px 0 0;
+            background: urL("http://images.d1.com.cn/images2012/New/result/box1.png") no-repeat 0 -42px;
+            font-size: 0;
+        }
+        .btn_close:hover{
+            background-position: -16px -42px;
+            color: #aa2e44;
+            cursor: pointer;
+        }
+    }
+    .insert_content{
+        padding: 20px;
+        line-height: 1.5em;
+        text-align: left;
+        .insert_content_innerbox{
+            overflow: hidden;
+            padding: 3px 0 0 34px;
+            .hint_content{
+                float: left;
+                color: #333333;
+                .hint_title{
+                    margin-bottom: 5px;
+                    font-size: 14px;
+                    font-weight: bold;
+                }
+                .two_btn{
+                    margin: 15px 0 5px;
+                }
+            }
+        }
+    }
 }
