--- a/scss/goods.scss
+++ b/scss/goods.scss
@@ -1,6 +1,48 @@
 a:hover{
     cursor: pointer;
 }
+.level1,.level2,.level3,.level4,.level5,.level6,.level7,.level8,.level9,.level10{
+    width: 100px;
+    height: 18px;
+    background-image: url(../images/goods/2017-9-18/star.gif);  
+    background-repeat: no-repeat;
+    overflow: hidden;
+    margin-top: 5px;
+    
+}
+.level0{
+    background-position: 0px 0px;
+}
+.level2{
+    background-position: 0px -20px;
+}
+.level4{
+    background-position: 0px -40px;
+}
+.level6{
+    background-position: 0px -57px;
+}
+.level8{
+    background-position: 0px -76px;
+}
+.level10{
+    background-position: 0px -97px;
+}
+.level9{
+    background-position: 0px -204px;
+}
+.level7{
+    background-position: 0px -182px;
+}
+.level5{
+    background-position: 0px -160px;
+}
+.level3{
+    background-position: 0px -140px;
+}
+.level1{
+    background-position: 0px -120px;
+}
 .center{
     margin:0 auto;
     width: 980px;
@@ -437,6 +479,69 @@ a:hover{
                     background: #fff;
                     margin-right: 5px;
                 }
+            }
+            .goodscomments{
+               margin-bottom: 10px;
+               width: 768px;
+               .mc{
+                   width: 768px;
+                   overflow: hidden;
+                   .item{
+                       position: relative;
+                       padding:  0 0 12px 130px;
+                       margin-bottom: 10px;
+                       .user{
+                          position: absolute;
+                          top: 10px;
+                          left: 0;
+                          width: 130px;
+                          text-align: center;
+                          color: #999;
+              
+                       }
+                       .userVip{
+                           img{
+                               border: 2px solid #EAEAEA;
+                           }
+                       }
+                       .i_item{
+                            padding: 10px 15px 5px;
+                            border: 1px solid #C07782;
+                           .o_topic{
+                               padding: 0 0 2px;
+                               margin-bottom: 10px;
+                               border-bottom: 1px dotted grey;
+                               overflow: hidden;
+                               .level_star{
+                                   float: left;
+                               }
+                               .date_time{
+                                   float: right;
+                               }
+                           }
+                           .o_topic_noborder{
+                               border: 0;
+                               .comments_content{
+                                   font-weight: normal;
+                                   line-height: 26px;
+                               }
+                           }
+                           
+                       }
+                       .corner{
+                           top:0;
+                           left: 115px;
+                           width: 20px;
+                           height: 40px;
+                           background-position: 0 -206px;
+                           position: absolute;
+                           background-image: url("http://images.d1.com.cn/images2011/commentimg/icon_clubs.gif");
+                           background-color: #fff;
+                           overflow: hidden;
+                       }
+                   }
+                   
+               }
             }
         }
         .goods_show_img_left{
