--- a/css/head.css
+++ b/css/head.css
@@ -140,7 +140,6 @@
 }
 
 .head_middle_inner {
-  overflow: hidden;
   height: 105px;
   width: 1200px;
   margin: 0 auto;
@@ -218,6 +217,7 @@
 }
 
 .shopping_car {
+  position: relative;
   margin-top: 25px;
   float: right;
   width: 150px;
@@ -235,14 +235,61 @@
   color: #f0424e;
 }
 
+.shopping_car a {
+  color: black;
+}
+
 .shopping_car_word:after {
   content: "";
   position: relative;
-  left: 16px;
+  left: 10px;
   top: 12px;
   border-left: 5px solid transparent;
   border-top: 6px solid #f0424e;
   border-right: 5px solid transparent;
+}
+
+.shopping_car:hover .cart {
+  display: block;
+}
+
+.shopping_car .cart {
+  font-size: 12px;
+  color: #5c5c5c;
+  z-index: 2001;
+  position: absolute;
+  border: #f0424e 2px solid;
+  background: #fff;
+  width: 407px;
+  display: none;
+  top: 35px;
+  right: 0px;
+}
+
+.cart em {
+  color: #c14d62;
+  font-weight: bold;
+  margin: 0 3px;
+}
+
+.shopping_car table {
+  border-collapse: collapse;
+  display: table;
+  border-spacing: 2px;
+  border-color: grey;
+}
+
+.shopping_car table td {
+  border-bottom: 1px dotted #cdcdcd;
+  color: #000;
+}
+
+.shopping_car .area_info {
+  height: 38px;
+  line-height: 30px;
+  background: #f9f9f9;
+  padding: 5px 10px;
+  color: #000;
 }
 
 .nav {
